--- a/index.html
+++ b/index.html
@@ -39,14 +39,44 @@
             <h2>Hello</h2>
             <p>I am <span>Advik</span></p>
             <div class="icons">
-                <a href="#"><img src="linkedin.png"></a>
-                <a href="https://twitter.com/"><img src="twitterX.png" class="twitter"></a>
-                <a href="#"><img src="whatsapp.png"></a>
-                <a href="#"><img src="meta.png" class="meta"></a>
-                <a href="#"><img src="instagram.png"></a>
+                <a href="#"><img src="linkedin.png" title="Linkedin" alt="Linkedin Logo"></a>
+                <a href="#"><img src="twitterX.png" title="X (formerly known as Twitter)" class="twitter" alt="Twitter X Logo"></a>
+                <a href="#"><img src="github.png" title="Github" alt="Github Logo"></a>
+                <a href="#"><img src="meta.png" title="Meta (Facebook)" class="meta" alt="Meta Logo"></a>
+                <a href="#"><img src="instagram.png" title="Instagram" alt="Instagram Logo"></a>
             </div>
         </div>
     </header>
+    <section class="about">
+        <div class="aboutImages">
+            <div class="greyAbout"></div>
+            <img src="dots.png" class="dots">
+            <img src="me_irl.png" alt="me" class="me_irl">
+        </div>
+        <div class="content">
+            <h1>About Me.</h1>
+            <p class="role">Web Developer</p>
+            <p>I am <span>Advik Singh Somvanshi</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, suscipit. Iusto quasi, voluptatem libero voluptatibus dolores similique voluptates ut minus tempore exercitationem dolorum animi tenetur laudantium veritatis quod ipsa fugit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, inventore! Ipsam omnis eos aliquam tempore magnam. Qui quaerat dolores dolore perferendis ducimus corrupti est.</p>
+        </div>
+        <div class="skills">
+            <div class="skillBar">
+                <div class="black webDev">
+                    <p>Web Development</p>
+                </div>
+            </div>
+            <div class="skillBar">
+                <div class="black java">
+                    <p>Java</p>
+                </div>
+            </div>
+            <div class="skillBar">
+                <div class="black python">
+                    <p>Python</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
