--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
             </div>
         </div>
-        <form>
+        <form class="contactForm">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Email Address">
             <textarea name="textarea" id="" placeholder="Message" required></textarea>
