--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <h2>Hello</h2>
             <p>I am <span>Advik</span></p>
             <div class="icons">
-                <a href="#" class="linkedin headerIcon"></a>
-                <a href="#" class="x headerIcon"></a>
-                <a href="#" class="github headerIcon"></a>
-                <a href="#" class="telegram headerIcon"></a>
-                <a href="#" class="insta headerIcon"></a>
+                <a href="https://advik.click/linkedin" target="_blank" class="linkedin headerIcon"></a>
+                <a href="https://advik.click/twitter" target="_blank" class="x headerIcon"></a>
+                <a href="https://advik.click/github" target="_blank" class="github headerIcon"></a>
+                <a href="https://advik.click/telegram" target="_blank" class="telegram headerIcon"></a>
+                <a href="https://advik.click/instagram" target="_blank" class="insta headerIcon"></a>
             </div>
         </div>
     </header>
