--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="iconInfo">
                     <div class="phoneIcon contactSingleIcon">
                         <p>Phone</p>
-                        <p>+91 73884 67939</p>
+                        <a href="tel:+917388467939">+91 73884 67939</a>
                     </div>
                 </div>
             </div>
