--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="duckwithbread.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,11 +40,11 @@
             <h2>Hello</h2>
             <p>I am <span>Advik</span></p>
             <div class="icons">
-                <a href="https://advik.click/linkedin" target="_blank" class="linkedin headerIcon"></a>
-                <a href="https://advik.click/x" target="_blank" class="x headerIcon"></a>
-                <a href="https://advik.click/github" target="_blank" class="github headerIcon"></a>
-                <a href="https://advik.click/telegram" target="_blank" class="telegram headerIcon"></a>
-                <a href="https://advik.click/instagram" target="_blank" class="insta headerIcon"></a>
+                <a href="https://advik.click/linkedin" class="linkedin headerIcon"></a>
+                <a href="https://advik.click/x" class="x headerIcon"></a>
+                <a href="https://advik.click/github" class="github headerIcon"></a>
+                <a href="https://advik.click/telegram" class="telegram headerIcon"></a>
+                <a href="https://advik.click/instagram" class="insta headerIcon"></a>
             </div>
         </div>
     </header>
@@ -165,7 +166,7 @@
                     </div>
                 </div>
             </div>
-            <form class="contactForm">
+            <form class="contactForm" method="post">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Email Address">
                 <textarea name="textarea" id="" placeholder="Message" required></textarea>
