--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <h2>Hello</h2>
             <p>I am <span>Advik</span></p>
             <div class="icons">
-                <a href="https://advik.click/linkedin" class="linkedin headerIcon"></a>
-                <a href="https://advik.click/x" class="x headerIcon"></a>
-                <a href="https://advik.click/github" class="github headerIcon"></a>
-                <a href="https://advik.click/telegram" class="telegram headerIcon"></a>
-                <a href="https://advik.click/instagram" class="insta headerIcon"></a>
+                <a href="https://advik.click/linkedin" target="_blank" class="linkedin headerIcon"></a>
+                <a href="https://advik.click/x" target="_blank" class="x headerIcon"></a>
+                <a href="https://advik.click/github" target="_blank" class="github headerIcon"></a>
+                <a href="https://advik.click/telegram" target="_blank" class="telegram headerIcon"></a>
+                <a href="https://advik.click/instagram" target="_blank" class="insta headerIcon"></a>
             </div>
         </div>
     </header>
