--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     </header>
     <section class="about" id="about">
         <div class="aboutImages">
-            <div class="greyAbout"></div>
+            <div class="redAbout"></div>
             <img src="dots.png" class="dots">
             <img src="me_irl.png" alt="a photo of me smiling" title="me_irl" class="me_irl">
         </div>
         <div class="contentWrapper">
             <div class="content">
-                <h1>About Me.</h1>
+                <h1>About Me</h1>
                 <p class="role">Web Developer</p>
                 <p>I am <span>Advik Singh Somvanshi</span>, a student of Zoho Schools of Technology. As a front-end developer, I believe that every pixel, every gradient and every animation holds the potential to create a lasting impression. For me, the web is not just a medium but a playground, where design meets emotion, and I am its dedicated craftsman.</p>
             </div>
@@ -143,6 +143,47 @@
                 <img src="project6.png" alt="Width Change on hover">
             </div>
     </section>
+    <section class="testimonialParentSect">
+        <div class="testimonials-section">
+            <h1>Testimonials</h1>
+            <div class="testimonials">
+                <input type="radio" id="radio1" name="radioSlide" checked>
+                <input type="radio" id="radio2" name="radioSlide">
+                <input type="radio" id="radio3" name="radioSlide">
+                <div class="radioImgs">
+                    <div class="slideImg first">
+                        <div class="testimonialSingle">
+                            <img src="https://edm.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cg_xy_center%2Cq_auto:good%2Cw_768%2Cx_1099%2Cy_1117/MTg3MDkxNTU3NDc4ODM1MjEx/a7_09879.jpg">
+                            <p>Bro is a legend, God. Btw, checkout my new track dontstopme!</p>
+                            <p>ISOxo</p>
+                            <p>Trap Music Prodigy</p>
+                        </div>
+                    </div>
+                    <div class="slideImg">
+                        <div class="testimonialSingle">
+                            <img src="https://edm.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cg_xy_center%2Cq_auto:good%2Cw_768%2Cx_1099%2Cy_1117/MTg3MDkxNTU3NDc4ODM1MjEx/a7_09879.jpg">
+                            <p>Bro is a legend, God. Btw, checkout my new track dontstopme!</p>
+                            <p>ISOxo</p>
+                            <p>Trap Music Prodigy</p>
+                        </div>
+                    </div>
+                    <div class="slideImg">
+                        <div class="testimonialSingle">
+                            <img src="https://edm.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cg_xy_center%2Cq_auto:good%2Cw_768%2Cx_1099%2Cy_1117/MTg3MDkxNTU3NDc4ODM1MjEx/a7_09879.jpg">
+                            <p>Bro is a legend, God. Btw, checkout my new track dontstopme!</p>
+                            <p>ISOxo</p>
+                            <p>Trap Music Prodigy</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="controls">
+                    <label for="radio1" class="radioBtn"></label>
+                    <label for="radio2" class="radioBtn"></label>
+                    <label for="radio3" class="radioBtn"></label>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="ContactSect" id="contact">
         <div class="Contact">
             <h1>Contact Me</h1>
@@ -150,7 +191,7 @@
                 <div class="iconInfo">
                     <div class="addressIcon contactSingleIcon">
                         <p>Address</p>
-                        <p>Zoho Corp HQ, Chennai</p>
+                        <a href="geo:12.831079,80.0501143">Zoho Corp HQ, Chennai</a>
                     </div>
                 </div>
                 <div class="iconInfo">
