--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="https://advik.click/linkedin" target="_blank" class="linkedin headerIcon"></a>
                 <a href="https://advik.click/x" target="_blank" class="x headerIcon"></a>
                 <a href="https://advik.click/github" target="_blank" class="github headerIcon"></a>
-                <a href="https://advik.click/telegram" target="_blank" class="telegram headerIcon"></a>
+                <a href="https://advik.click/snapchat" target="_blank" class="snapchat headerIcon"></a>
                 <a href="https://advik.click/instagram" target="_blank" class="insta headerIcon"></a>
             </div>
         </div>
