--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <img src="project6.png" alt="Width Change on hover">
             </div>
     </section>
-    <section class="testimonialParentSect">
+    <section class="testimonialParentSect" id="testimonial">
         <div class="testimonials-section">
             <h1>Testimonials</h1>
             <div class="testimonials">
