Added real testimonials:))

--- a/index.html
+++ b/index.html
@@ -154,26 +154,26 @@
                 <div class="radioImgs">
                     <div class="slideImg first">
                         <div class="testimonialSingle">
-                            <img src="https://edm.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cg_xy_center%2Cq_auto:good%2Cw_768%2Cx_1099%2Cy_1117/MTg3MDkxNTU3NDc4ODM1MjEx/a7_09879.jpg">
-                            <p>Bro is a legend, God. Btw, checkout my new track dontstopme!</p>
-                            <p>ISOxo</p>
-                            <p>Trap Music Prodigy</p>
+                            <img src="aravind.jpg">
+                            <p>Advik's programming prowess is truly commendable. Even while in the learning phase, his insights have been invaluable to me. His patience, dedication, and knack for problem-solving stand out. I'm genuinely grateful to have such a talented friend guiding me through the intricacies of coding.</p>
+                            <p>Aravind</p>
+                            <p>Student, ZS Tech</p>
                         </div>
                     </div>
                     <div class="slideImg">
                         <div class="testimonialSingle">
-                            <img src="https://edm.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cg_xy_center%2Cq_auto:good%2Cw_768%2Cx_1099%2Cy_1117/MTg3MDkxNTU3NDc4ODM1MjEx/a7_09879.jpg">
-                            <p>Bro is a legend, God. Btw, checkout my new track dontstopme!</p>
-                            <p>ISOxo</p>
-                            <p>Trap Music Prodigy</p>
+                            <img src="amogha.jpg">
+                            <p>Advik is really good in the field of web development. His skills are exceptional, and his friendly nature makes him a joy to work with. Whenever I've had questions or needed assistance, he has been there with a helping hand. His dedication and talent are truly admirable.</p>
+                            <p>Mahalakshmi K.</p>
+                            <p>Student, ZS Tech</p>
                         </div>
                     </div>
                     <div class="slideImg">
                         <div class="testimonialSingle">
-                            <img src="https://edm.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cg_xy_center%2Cq_auto:good%2Cw_768%2Cx_1099%2Cy_1117/MTg3MDkxNTU3NDc4ODM1MjEx/a7_09879.jpg">
-                            <p>Bro is a legend, God. Btw, checkout my new track dontstopme!</p>
-                            <p>ISOxo</p>
-                            <p>Trap Music Prodigy</p>
+                            <img src="keerthana.jpg">
+                            <p>Advik showcases exceptional technical skills, a deep understanding of project goals, and unmatched dedication. His proactive communication and passion for the craft made collaboration effortless and productive. Highly recommended.</p>
+                            <p>Keerthana S.</p>
+                            <p>Student, ZS Tech</p>
                         </div>
                     </div>
                 </div>
