--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="slideImg">
                         <div class="testimonialSingle">
-                            <img src="amogha.jpg">
+                            <img src="amogha.png">
                             <p>Advik is really good in the field of web development. His skills are exceptional, and his friendly nature makes him a joy to work with. Whenever I've had questions or needed assistance, he has been there with a helping hand. His dedication and talent are truly admirable.</p>
                             <p>Mahalakshmi K.</p>
                             <p>Student, ZS Tech</p>
