Tried adding form

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </div>
                 </div>
             </div>
-            <form class="contactForm" method="post">
+            <form class="contactForm" method="POST" netlify>
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Email Address">
                 <textarea name="textarea" id="" placeholder="Message" required></textarea>
