Changed shortlink domain

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <h2>Hello</h2>
             <p>I am <span>Advik</span></p>
             <div class="icons">
-                <a href="https://advik.click/linkedin" target="_blank" class="linkedin headerIcon"></a>
-                <a href="https://advik.click/x" target="_blank" class="x headerIcon"></a>
-                <a href="https://advik.click/github" target="_blank" class="github headerIcon"></a>
-                <a href="https://advik.click/snapchat" target="_blank" class="snapchat headerIcon"></a>
-                <a href="https://advik.click/instagram" target="_blank" class="insta headerIcon"></a>
+                <a href="https://u.advik.dev/linkedin" target="_blank" class="linkedin headerIcon"></a>
+                <a href="https://u.advik.dev/x" target="_blank" class="x headerIcon"></a>
+                <a href="https://u.advik.dev/github" target="_blank" class="github headerIcon"></a>
+                <a href="https://u.advik.dev/snapchat" target="_blank" class="snapchat headerIcon"></a>
+                <a href="https://u.advik.dev/instagram" target="_blank" class="insta headerIcon"></a>
             </div>
         </div>
     </header>
